--- a/src/index.css
+++ b/src/index.css
@@ -17,27 +17,13 @@ code {
     monospace;
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
+/* Hide scrollbar for Chrome, Safari and Opera */
+.example::-webkit-scrollbar {
+  display: none;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: #FFFFFF;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 5px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
-
-main * {
-  @apply transition-colors duration-300;
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
